--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -6,4 +6,17 @@
   height: 70px;
   padding: 5px;
   width: 100%;
+  background-color: rgb(90, 90, 235);
+  margin: 0;
+  color: #fff;
+}
+
+.nav {
+  padding-inline: 3em;
+}
+.nav a {
+  padding: 2em;
+  color: #fff;
+  text-decoration: none;
+  font-size: 1.2rem;
 }
