--- a/src/components/calculator.css
+++ b/src/components/calculator.css
@@ -1,9 +1,11 @@
 .calculator {
   display: flex;
-  justify-content: center;
-  align-items: center;
   margin-top: 3em;
   width: 100%;
+}
+.doMath {
+  white-space: nowrap;
+  margin-top: 1em;
 }
 
 .calculator button {
@@ -68,8 +70,9 @@ table tr td {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 50%;
+  width: 100%;
   margin: auto;
+  margin-top: 4em;
 }
 
 .name {
